fix(material-experimental/mdc-select): align drop down width with MDC spec

--- a/src/material-experimental/mdc-select/select.scss
+++ b/src/material-experimental/mdc-select/select.scss
@@ -7,6 +7,7 @@
 $mat-select-arrow-size: 5px !default;
 $mat-select-arrow-margin: 4px !default;
 $mat-select-panel-max-height: 256px !default;
+$mat-select-panel-max-width: 280px !default;
 $mat-select-placeholder-arrow-space: 2 * ($mat-select-arrow-size + $mat-select-arrow-margin);
 $leading-width: 12px !default;
 $scale: 0.75 !default;
@@ -73,6 +74,7 @@ $scale: 0.75 !default;
   max-height: $mat-select-panel-max-height;
   position: static; // MDC uses `absolute` by default which will throw off our positioning.
   outline: 0;
+  max-width: $mat-select-panel-max-width;
 
   // Note that we include this private mixin, because the public
   // one adds a bunch of styles that we aren't using for the menu.
